Fix clipped slideshow

--- a/css/general.css
+++ b/css/general.css
@@ -208,7 +208,7 @@ a::visited {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: rgb(11, 12, 15);
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
