--- a/css/homepage.css
+++ b/css/homepage.css
@@ -25,8 +25,7 @@ body {
 }
 
 #featured-img {
-  width: 800px;
-  max-width: 100vw;
+  width: 100vw;
   height: 600px;
   margin: auto;
   margin-top: 180px;
